- Fixing some boolean issues in Inspections Files modified - [pages-config.json,cx2_published_dataModel.json,FormMessages.java,FormController.java,NewForm.js,newFormDialog.html,NewForm.html,MasterInspections.java,NewForm.variables.json,newFormDialog.js,FormService.java,Forms.variables.json,newFormDialog.variables.json,InspectionDesign.java]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -223,6 +223,9 @@
   "params" : [ {
     "name" : "formTypeId",
     "type" : "integer"
+  }, {
+    "name" : "draftId",
+    "type" : "integer"
   } ]
 }, {
   "name" : "ProcessForms",
