Projects- Contractors DB changes New files added - [VendorsToProjectServiceImpl.java,VendorsToProjectService.java,VendorsToProject.java,VendorsToProjectController.java,VendorsToProjectDao.java] Files modified - [cx2_published_dataModel.json,VendorController.java,VendorServiceImpl.java,ProjectsService.java,Vendor.java,VendorService.java,ProjectsServiceImpl.java,ProjectsController.java,Projects.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -186,6 +186,9 @@
     "table" : "Vendors2Form",
     "schema" : "cx2"
   }, {
+    "table" : "VendorsToProject",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
   } ],
