Vendor Functionality For projects with changes for Primary vendor reflecting in Projects table with triggers New files added - [UpdateVendorsToProjectRequest.java] Files modified - [VendorsToProjectServiceImpl.java,Cx2QueryExecutorServiceImpl.java,cx2_published_dataModel.json,VendorsToProjectService.java,ViewProject.js,cx2-queries.hbm.xml,QueryExecutionController.java,VendorsToProject.java,VendorsToProjectController.java,cx2_query.json,ViewProject.variables.json,Cx2QueryExecutorService.java] Removed files - [cx2_draft_dataModel.json]

--- a/src/main/webapp/pages/ViewProject/ViewProject.variables.json
+++ b/src/main/webapp/pages/ViewProject/ViewProject.variables.json
@@ -14683,6 +14683,35 @@
     "saveInPhonegap" : false,
     "controller" : "ProjectMessagingMail"
   },
+  "svUpdateVendorsToProject" : {
+    "_id" : "wm-svUpdateVendorsToProject-wm.ServiceVariable-1490877818025",
+    "name" : "svUpdateVendorsToProject",
+    "owner" : "Page",
+    "category" : "wm.ServiceVariable",
+    "dataBinding" : [ {
+      "target" : "project",
+      "value" : "bind:pageParams.ProjectGUID",
+      "type" : "string"
+    } ],
+    "type" : "com.wavemaker.commons.wrapper.IntegerWrapper",
+    "service" : "cx2",
+    "operation" : "executeUpdateVendorsToProject",
+    "operationId" : "QueryExecutionController_executeUpdateVendorsToProject",
+    "operationType" : "put",
+    "serviceType" : "DataService",
+    "dataSet" : [ ],
+    "isList" : false,
+    "maxResults" : 20,
+    "designMaxResults" : 10,
+    "onSuccess" : "Variables.lvVendorsToProjects.listRecords()",
+    "startUpdate" : false,
+    "autoUpdate" : false,
+    "inFlightBehavior" : "executeLast",
+    "transformationRequired" : false,
+    "saveInPhonegap" : false,
+    "controller" : "QueryExecution",
+    "spinnerContext" : "page"
+  },
   "svVendors" : {
     "_id" : "wm-svVendors-wm.ServiceVariable-1490866400300",
     "name" : "svVendors",
