TodayInspections UI New files added - [TodayInspections] Files modified - [pages-config.json,pom.xml,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -790,6 +790,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_TodayInspections" : {
+    "_id" : "wm-goToPage_TodayInspections-wm.NavigationVariable-1490933158107",
+    "name" : "goToPage_TodayInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "TodayInspections",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_UserClosedForms" : {
     "_id" : "wm-goToPage_UserClosedForms-wm.NavigationVariable-1482831972576",
     "name" : "goToPage_UserClosedForms",
