--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -248,6 +248,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "TodayInspections",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "UserClosedForms",
   "type" : "PAGE",
   "params" : [ {
