ScheduleInspections New files added - [ScheduleInspections,GetInspectionsByOutcomeResponse.java] Files modified - [EmployeesMunicipalitiesResponse.java,AllFeesOfFormsForCreatedByAndSharedWithByMunicipalityResponse.java,CountOfCxprojectsActiveResponse.java,NoOfItemsInUserCartResponse.java,FormsForUsersAndSharedResponse.java,GetVendorApprovalListByMunicipalityResponse.java,AdminVendorsListResponse.java,GetFormsForMunicpalityResponse.java,Cx2QueryExecutorServiceImpl.java,GetRolesForMunicipalityResponse.java,CheckingUserWithMunicipalityInRolesResponse.java,ManualFeeTypeCountForMunicipalityResponse.java,ProcessFormsForUserByMunicipalityResponse.java,UserSubscriptionsCountResponse.java,CountOfCasesForMunicipalityResponse.java,cx2_query.json,UserCountResponse.java,VendorsLinkedWithFormResponse.java,EmployeesOrAdminsMunicipalitiesResponse.java,pages-config.json,CountOfUserFormsResponse.java,GetEmailIdResponse.java,cx2-queries.hbm.xml,FormsByVendorsForDashboardResponse.java,FormsTaggedWithGisrecordsResponse.java,FormsByCategoryResponse.java,FormsCountForMunicipalitiesResponse.java,AllFeesOfFormsForCreatedByAndSharedWithResponse.java,FormsByCategoryForDashBoardResponse.java,GetUserIdFromPasswordResetTokenResponse.java,GetListofGroupNameResponse.java,CountOfInspectionDesignByMunicipalityResponse.java,CheckIfCompanyUserIsVendorAdminResponse.java,CountOfProjectsForUsersAndSharedWithByMunicipalityResponse.java,CompanyFormsByVendorIdResponse.java,GetFeeIdsOfUserInCartResponse.java,GetWriteAccessGroupMembersByFormGuidResponse.java,GetCartItemIdsResponse.java,GetUserIdResponse.java,CountOfCompnayFormsByVendorIdResponse.java,AdminsMunicipalitiesResponse.java,GetFormTypesByCategoriesAndMunicipalitiesResponse.java,CountOfFormsForMunicipalityResponse.java,AllFeeformCountResponse.java,FormsTypesForDashboardResponse.java,CountOfMunicipalityProjectsResponse.java,CountOfMuncipalityApplicationsByVendorResponse.java,FetchRolesForUserWithMunicipalityResponse.java,VendorCountResponse.java,GetOw

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -768,6 +768,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_ScheduleInspections" : {
+    "_id" : "wm-goToPage_ScheduleInspections-wm.NavigationVariable-1490948959704",
+    "name" : "goToPage_ScheduleInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ScheduleInspections",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_Support" : {
     "_id" : "wm-goToPage_Support-wm.NavigationVariable-1478577248530",
     "name" : "goToPage_Support",
