--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -240,6 +240,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "ScheduleInspections",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "Support",
   "type" : "PAGE",
   "params" : [ ]
