Count For Inspections pending for scheduling UI for tomorrow and yesterday Inspections New files added - [TomorrowInspections,YesterdayInspections,GetInspectionsToBeScheduledByMunicipalityResponse.java] Files modified - [TodayInspections.variables.json,pages-config.json,Cx2QueryExecutorServiceImpl.java,MunicipalityInspections.variables.json,MunicipalityInspections.html,cx2-queries.hbm.xml,QueryExecutionController.java,TodayInspections.html,cx2_query.json,Cx2QueryExecutorService.java,app.variables.json]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -256,6 +256,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "TomorrowInspections",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "UserClosedForms",
   "type" : "PAGE",
   "params" : [ {
@@ -298,6 +302,10 @@
   } ]
 }, {
   "name" : "WorkSchedule",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "YesterdayInspections",
   "type" : "PAGE",
   "params" : [ ]
 }, {
