--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -812,6 +812,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_TomorrowInspections" : {
+    "_id" : "wm-goToPage_TomorrowInspections-wm.NavigationVariable-1490961084570",
+    "name" : "goToPage_TomorrowInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "TomorrowInspections",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_UserClosedForms" : {
     "_id" : "wm-goToPage_UserClosedForms-wm.NavigationVariable-1482831972576",
     "name" : "goToPage_UserClosedForms",
@@ -924,6 +935,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "WorkSchedule",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_YesterdayInspections" : {
+    "_id" : "wm-goToPage_YesterdayInspections-wm.NavigationVariable-1490961103232",
+    "name" : "goToPage_YesterdayInspections",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "YesterdayInspections",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
