LetterTemplates- Table New files added - [LetterTemplatesServiceImpl.java,LetterTemplatesDao.java,LetterTemplatesService.java,LetterTemplatesController.java,LetterTemplates.java] Files modified - [cx2_published_dataModel.json,FormTypesServiceImpl.java,ProjectsService.java,ProjectsServiceImpl.java,InspectionDesignService.java,Projects.java,FormTypesController.java,FormTypes.java,FormTypesService.java,UsersController.java,InspectionDesignServiceImpl.java,UsersService.java,Users.java,ProjectsController.java,UsersServiceImpl.java,InspectionDesign.java,db-connection-settings.json,InspectionDesignController.java]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -191,6 +191,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "LetterTemplates",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
