Code Sets Changes New files added - [CodeSetsService.java,CodeSetsController.java,CodeSetsDao.java,CodeSetsServiceImpl.java,CodeSets.java] Files modified - [cx2_published_dataModel.json,FormTypesServiceImpl.java,ProjectsService.java,States.java,ProjectsServiceImpl.java,MunicipalitiesController.java,Projects.java,FormTypesController.java,FormTypesService.java,FormTypes.java,UsersController.java,StatesServiceImpl.java,UsersService.java,Users.java,StatesController.java,StatesService.java,EditInspection.variables.json,Municipalities.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -194,6 +194,9 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "CodeSets",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
