Code List Changes New files added - [CodeList.java,CodeListController.java,CodeListServiceImpl.java,CodeListDao.java,CodeListService.java] Files modified - [cx2_published_dataModel.json,ProjectsService.java,ProjectsServiceImpl.java,MunicipalitiesController.java,Projects.java,FormTypesService.java,UsersController.java,CodeSetsServiceImpl.java,CodeSets.java,Municipalities.java,MunicipalitiesServiceImpl.java,FormTypesServiceImpl.java,CodeSetsController.java,States.java,FormTypesController.java,FormTypes.java,CodeSetsService.java,StatesServiceImpl.java,UsersService.java,Users.java,StatesController.java,StatesService.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesService.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -15,13 +15,16 @@
     "table" : "CaseStatuses",
     "schema" : "cx2"
   }, {
+    "table" : "CodeSets",
+    "schema" : "cx2"
+  }, {
+    "table" : "Fees",
+    "schema" : "cx2"
+  }, {
     "table" : "CaseTypes",
     "schema" : "cx2"
   }, {
     "table" : "Document",
-    "schema" : "cx2"
-  }, {
-    "table" : "Fees",
     "schema" : "cx2"
   }, {
     "table" : "FormCategories",
@@ -36,16 +39,13 @@
     "table" : "FormHistory",
     "schema" : "cx2"
   }, {
-    "table" : "FormStatuses",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "FormDraft",
     "schema" : "cx2"
   }, {
     "table" : "FormMessages",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
     "table" : "FormFieldTypes",
@@ -60,22 +60,25 @@
     "table" : "FormTypeFields",
     "schema" : "cx2"
   }, {
+    "table" : "FormTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "FormToInspectionCategoryMapping",
     "schema" : "cx2"
   }, {
     "table" : "GIS2Forms",
     "schema" : "cx2"
   }, {
-    "table" : "GISRecords",
-    "schema" : "cx2"
-  }, {
     "table" : "GISContacts",
     "schema" : "cx2"
   }, {
-    "table" : "GlobalSettings",
+    "table" : "GISRecords",
     "schema" : "cx2"
   }, {
     "table" : "InspectionDesign",
+    "schema" : "cx2"
+  }, {
+    "table" : "GlobalSettings",
     "schema" : "cx2"
   }, {
     "table" : "Holidays",
@@ -102,9 +105,6 @@
     "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
-    "schema" : "cx2"
-  }, {
     "table" : "MasterForms",
     "schema" : "cx2"
   }, {
@@ -112,6 +112,9 @@
     "schema" : "cx2"
   }, {
     "table" : "Municipalities",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterCases",
     "schema" : "cx2"
   }, {
     "table" : "MasterProjects",
@@ -147,9 +150,6 @@
     "table" : "SharedWith",
     "schema" : "cx2"
   }, {
-    "table" : "Users",
-    "schema" : "cx2"
-  }, {
     "table" : "MyCart",
     "schema" : "cx2"
   }, {
@@ -159,13 +159,16 @@
     "table" : "Subdivisions",
     "schema" : "cx2"
   }, {
+    "table" : "Users",
+    "schema" : "cx2"
+  }, {
+    "table" : "Vendor",
+    "schema" : "cx2"
+  }, {
     "table" : "UserPasswordResetTokens",
     "schema" : "cx2"
   }, {
     "table" : "UserSubscriptions",
-    "schema" : "cx2"
-  }, {
-    "table" : "Vendor",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
@@ -195,7 +198,7 @@
     "table" : "VendorUsers",
     "schema" : "cx2"
   }, {
-    "table" : "CodeSets",
+    "table" : "CodeList",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
