--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -3,6 +3,17 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "CXCodeList",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "CodeSetId",
+    "type" : "integer"
+  } ]
+}, {
+  "name" : "CXCodeSets",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "CXGlobalSettings",
   "type" : "PAGE",
   "params" : [ ]
