--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -179,6 +179,17 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityCodeList",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "CodeSetId",
+    "type" : "integer"
+  } ]
+}, {
+  "name" : "MunicipalityCodeSets",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityInspections",
   "type" : "PAGE",
   "params" : [ ]
