- Moved dynamic field editing to partal (dynamicFieldEditor) in preparation for adding it to Inspections as well - Fixed small bug with editing Calculated fields New files added - [dynamicFieldEditor.js,dynamicFieldEditor.variables.json,dynamicFieldEditor.html,dynamicFieldEditor.css] Files modified - [pages-config.json,cx2_published_dataModel.json,CodeList.java,NewForm.js,EditForm.js,app.css,NewForm.html,EditForm.variables.json,ViewInspection.variables.json,InspectionDesignService.java,NewForm.variables.json,FormTypeFields.java,InspectionOutcome.java,InspectionDesignServiceImpl.java,EditForm.html,MasterForms.java,pom.xml,CodeSets.java,EditInspection.variables.json,app.js,InspectionDesign.java,ManageInspections.variables.json,db-connection-settings.json,InspectionDesignController.java]

--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -331,6 +331,16 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "dynamicFieldEditor",
+  "type" : "PARTIAL",
+  "params" : [ {
+    "name" : "formTypeId",
+    "type" : "integer"
+  }, {
+    "name" : "inspectionDesignId",
+    "type" : "integer"
+  } ]
+}, {
   "name" : "footer",
   "type" : "FOOTER",
   "params" : [ ]
