DB Changes New files added - [ViolationsController.java,CodesToInspectionServiceImpl.java,CodesToInspectionDao.java,CodesToInspectionController.java,ViolationsService.java,CodesToFormController.java,CodesToFormService.java,CodesToForm.java,ViolationsDao.java,CodesToFormDao.java,CodesToInspectionService.java,ViolationsServiceImpl.java,Violations.java,CodesToFormServiceImpl.java,CodesToInspection.java] Files modified - [MasterInspectionsServiceImpl.java,cx2_published_dataModel.json,CodeList.java,CodeListController.java,ProjectsService.java,MasterInspectionsController.java,ProjectsServiceImpl.java,MasterFormsService.java,MunicipalitiesController.java,Forms.html,CodeListService.java,Projects.java,FormTypesService.java,UsersController.java,InspectionDesignServiceImpl.java,GisrecordsServiceImpl.java,MasterForms.java,CodeSetsServiceImpl.java,CodeSets.java,Municipalities.java,MunicipalitiesServiceImpl.java,InspectionDesignController.java,GisrecordsService.java,MasterFormsController.java,MasterInspectionsService.java,FormTypesServiceImpl.java,CodeSetsController.java,ManageMunicipalities.variables.json,MasterInspections.java,InspectionDesignService.java,FormTypesController.java,CodeSetsService.java,FormTypes.java,ManageMunicipalities.html,UsersService.java,Users.java,CodeListServiceImpl.java,Forms.variables.json,GisrecordsController.java,Gisrecords.java,ProjectsController.java,UsersServiceImpl.java,MunicipalitiesService.java,InspectionDesign.java,MasterFormsServiceImpl.java,db-connection-settings.json]

--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -198,7 +198,16 @@
     "table" : "VendorsToProject",
     "schema" : "cx2"
   }, {
+    "table" : "Violations",
+    "schema" : "cx2"
+  }, {
     "table" : "VendorUsers",
+    "schema" : "cx2"
+  }, {
+    "table" : "CodesToForm",
+    "schema" : "cx2"
+  }, {
+    "table" : "CodesToInspection",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
