--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -174,6 +174,17 @@
     "isList" : false,
     "saveInPhonegap" : false
   },
+  "goToPage_ClosedCases" : {
+    "_id" : "wm-goToPage_ClosedCases-wm.NavigationVariable-1491395556167",
+    "name" : "goToPage_ClosedCases",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "ClosedCases",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_CodeEnforcementDashboard" : {
     "_id" : "wm-goToPage_CodeEnforcementDashboard-wm.NavigationVariable-1489466664404",
     "name" : "goToPage_CodeEnforcementDashboard",
@@ -792,6 +803,17 @@
     "dataBinding" : [ ],
     "operation" : "gotoPage",
     "pageName" : "NewForm",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
+  "goToPage_OpenCases" : {
+    "_id" : "wm-goToPage_OpenCases-wm.NavigationVariable-1491395542156",
+    "name" : "goToPage_OpenCases",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "OpenCases",
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
