--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -15,46 +15,40 @@
     "table" : "CaseStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "CaseTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "CodeList",
     "schema" : "cx2"
   }, {
     "table" : "CodeSets",
     "schema" : "cx2"
   }, {
+    "table" : "CaseTypes",
+    "schema" : "cx2"
+  }, {
     "table" : "CodesToForm",
-    "schema" : "cx2"
-  }, {
-    "table" : "CodesToInspection",
-    "schema" : "cx2"
-  }, {
-    "table" : "ContractorTypes",
-    "schema" : "cx2"
-  }, {
-    "table" : "Document",
     "schema" : "cx2"
   }, {
     "table" : "Fees",
     "schema" : "cx2"
   }, {
+    "table" : "CodesToInspection",
+    "schema" : "cx2"
+  }, {
+    "table" : "Document",
+    "schema" : "cx2"
+  }, {
     "table" : "FormCategories",
+    "schema" : "cx2"
+  }, {
+    "table" : "ContractorTypes",
     "schema" : "cx2"
   }, {
     "table" : "FormCategoryMapping",
     "schema" : "cx2"
   }, {
-    "table" : "FormDraft",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormFieldTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "FormHistory",
     "schema" : "cx2"
   }, {
-    "table" : "FormMessageTagging",
+    "table" : "FormDraft",
     "schema" : "cx2"
   }, {
     "table" : "FormMessages",
@@ -63,16 +57,22 @@
     "table" : "FormStatuses",
     "schema" : "cx2"
   }, {
-    "table" : "FormToInspectionCategoryMapping",
+    "table" : "FormTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormFieldTypes",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormMessageTagging",
+    "schema" : "cx2"
+  }, {
+    "table" : "FormsToInspections",
     "schema" : "cx2"
   }, {
     "table" : "FormTypeFields",
     "schema" : "cx2"
   }, {
-    "table" : "FormTypes",
-    "schema" : "cx2"
-  }, {
-    "table" : "FormsToInspections",
+    "table" : "FormToInspectionCategoryMapping",
     "schema" : "cx2"
   }, {
     "table" : "GIS2Forms",
@@ -93,31 +93,25 @@
     "table" : "InspectionCategories",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionCategoryMapping",
-    "schema" : "cx2"
-  }, {
     "table" : "InspectionDesign",
-    "schema" : "cx2"
-  }, {
-    "table" : "InspectionGis",
     "schema" : "cx2"
   }, {
     "table" : "InspectionOutcome",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionOutcomeFee",
+    "table" : "InspectionGis",
     "schema" : "cx2"
   }, {
-    "table" : "InspectionSequence",
+    "table" : "InspectionOutcomeFee",
     "schema" : "cx2"
   }, {
     "table" : "LetterTemplates",
     "schema" : "cx2"
   }, {
-    "table" : "ManualFeeTypes",
+    "table" : "InspectionSequence",
     "schema" : "cx2"
   }, {
-    "table" : "MasterCases",
+    "table" : "ManualFeeTypes",
     "schema" : "cx2"
   }, {
     "table" : "MasterForms",
@@ -126,10 +120,16 @@
     "table" : "MasterInspections",
     "schema" : "cx2"
   }, {
+    "table" : "Municipalities",
+    "schema" : "cx2"
+  }, {
+    "table" : "MasterCases",
+    "schema" : "cx2"
+  }, {
     "table" : "MasterProjects",
     "schema" : "cx2"
   }, {
-    "table" : "Municipalities",
+    "table" : "InspectionCategoryMapping",
     "schema" : "cx2"
   }, {
     "table" : "MunicipalityGroupMembers",
@@ -138,10 +138,10 @@
     "table" : "MunicipalityGroups",
     "schema" : "cx2"
   }, {
-    "table" : "MyCart",
+    "table" : "ProjectForms",
     "schema" : "cx2"
   }, {
-    "table" : "ProjectForms",
+    "table" : "Projects",
     "schema" : "cx2"
   }, {
     "table" : "ProjectGISRecords",
@@ -153,31 +153,19 @@
     "table" : "ProjectTasks",
     "schema" : "cx2"
   }, {
-    "table" : "Projects",
-    "schema" : "cx2"
-  }, {
     "table" : "Roles",
     "schema" : "cx2"
   }, {
     "table" : "SharedWith",
     "schema" : "cx2"
   }, {
+    "table" : "MyCart",
+    "schema" : "cx2"
+  }, {
     "table" : "StandardViews",
     "schema" : "cx2"
   }, {
-    "table" : "States",
-    "schema" : "cx2"
-  }, {
     "table" : "Subdivisions",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserPasswordResetTokens",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserSubscriptions",
-    "schema" : "cx2"
-  }, {
-    "table" : "UserViewPreferences",
     "schema" : "cx2"
   }, {
     "table" : "Users",
@@ -186,19 +174,28 @@
     "table" : "Vendor",
     "schema" : "cx2"
   }, {
-    "table" : "VendorAdmins",
+    "table" : "UserPasswordResetTokens",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserSubscriptions",
     "schema" : "cx2"
   }, {
     "table" : "VendorApprovals",
     "schema" : "cx2"
   }, {
-    "table" : "VendorLicenseTypes",
-    "schema" : "cx2"
-  }, {
     "table" : "VendorLicenses",
     "schema" : "cx2"
   }, {
-    "table" : "VendorUsers",
+    "table" : "States",
+    "schema" : "cx2"
+  }, {
+    "table" : "UserViewPreferences",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorAdmins",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorLicenseTypes",
     "schema" : "cx2"
   }, {
     "table" : "Vendors2Form",
@@ -208,6 +205,12 @@
     "schema" : "cx2"
   }, {
     "table" : "Violations",
+    "schema" : "cx2"
+  }, {
+    "table" : "VendorUsers",
+    "schema" : "cx2"
+  }, {
+    "table" : "BillingInformation",
     "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
