New Cases Tile and Data Grid New files added - [NewCases,CounNewCasesAndAfterDateResponse.java,FormsWithCodeEnforcementByMunicipalityAndAfterDateResponse.java] Files modified - [pages-config.json,Cx2QueryExecutorServiceImpl.java,CodeEnforcementDashboard.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,CodeEnforcementDashboard.js,CodeEnforcementDashboard.html,cx2_query.json,Cx2QueryExecutorService.java,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -795,6 +795,17 @@
     } ],
     "pageTransitions" : "none"
   },
+  "goToPage_NewCases" : {
+    "_id" : "wm-goToPage_NewCases-wm.NavigationVariable-1491476304176",
+    "name" : "goToPage_NewCases",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "NewCases",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_NewForm" : {
     "_id" : "wm-goToPage_NewForm-wm.NavigationVariable-1485785723881",
     "name" : "goToPage_NewForm",
