--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -244,6 +244,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "NewCases",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "NewForm",
   "type" : "PAGE",
   "params" : [ {
