- New back-end stuff for dynamic fields in Inspections - Adding InspectionService to get things started that we'll need for inspections. New files added - [MultiDatabaseHelper.java,ui-grid.min.css,DynamicFieldService.spring.xml,servicedef.xml,README.md,README.md,InspectionService.java,servicedef.xml,ui-grid.js,DynamicFieldController.java,InspectionController.java,InspectionService.spring.xml,DynamicFieldService.java] Files modified - [pages-config.json,FormController.java,UserOpenForms.variables.json,project-services.xml,Forms.html,ViewInspection.variables.json,ViewInspection.html,UserOpenForms.js,FormService.java,Forms.variables.json,pom.xml,dynamicFieldEditor.variables.json,index.html,app.js,dynamicFieldEditor.js,InspectionController.java,InspectionService.java] Removed files - [ui-grid.min.css]

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
-                <directory>services/DocumentService/src</directory>
+                <directory>services/DynamicFieldService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -63,6 +63,13 @@
             <resource>
                 <filtering>true</filtering>
                 <directory>services/FormStatusUpdate/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
+                <directory>services/InspectionService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
                 </excludes>
@@ -194,11 +201,12 @@
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
-                                <source>services/DocumentService/src</source>
+                                <source>services/DynamicFieldService/src</source>
                                 <source>services/FileService/src</source>
                                 <source>services/FormMessagingMailService/src</source>
                                 <source>services/FormService/src</source>
                                 <source>services/FormStatusUpdate/src</source>
+                                <source>services/InspectionService/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
