--- a/services/cx2/designtime/db-connection-settings.json
+++ b/services/cx2/designtime/db-connection-settings.json
@@ -212,6 +212,12 @@
   }, {
     "table" : "VendorUsers",
     "schema" : "cx2"
+  }, {
+    "table" : "PaymentHistory",
+    "schema" : "cx2"
+  }, {
+    "table" : "TransactionToFees",
+    "schema" : "cx2"
   } ],
   "schemaFilter" : [ "cx2" ],
   "impersonateUser" : false,
