Changes for MyCart- Optimized query to fetch only required fields, Made fee list to be paginated and updated the sum to show total sum Municipality CheckOut UI New files added - [MunicipalityCheckOut,FeesInCartByUserResponse.java,SumOfFeesInUsersCartResponse.java] Files modified - [pages-config.json,Cx2QueryExecutorServiceImpl.java,MyCart.js,cx2-queries.hbm.xml,QueryExecutionController.java,MyCart.html,MyCart.variables.json,Cx2QueryExecutorService_V1.java,cx2_query.json,Cx2QueryExecutorService.java,Cx2QueryExecutorServiceImpl_V1.java,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -636,6 +636,17 @@
     "dataSet" : [ ],
     "pageTransitions" : "none"
   },
+  "goToPage_MunicipalityCheckOut" : {
+    "_id" : "wm-goToPage_MunicipalityCheckOut-wm.NavigationVariable-1491545328347",
+    "name" : "goToPage_MunicipalityCheckOut",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "MunicipalityCheckOut",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_MunicipalityCodeList" : {
     "_id" : "wm-goToPage_MunicipalityCodeList-wm.NavigationVariable-1491306546863",
     "name" : "goToPage_MunicipalityCodeList",
