--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -183,6 +183,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "MunicipalityCheckOut",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "MunicipalityCodeList",
   "type" : "PAGE",
   "params" : [ {
