--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/MapMultipleFeesWithTransaction/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/ProjectMessagingMailService/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -205,6 +212,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                            
                                 <source>services/AddMultipleFeeToCart/src</source>
                                 <source>services/CXPasswordResetService/src</source>
                                 <source>services/DocumentProxyService/src</source>
@@ -215,6 +223,7 @@
                                 <source>services/FormService/src</source>
                                 <source>services/FormStatusUpdate/src</source>
                                 <source>services/InspectionService/src</source>
+                                <source>services/MapMultipleFeesWithTransaction/src</source>
                                 <source>services/ProjectMessagingMailService/src</source>
                                 <source>services/ProjectTaskAssignment/src</source>
                                 <source>services/ResetPasswordMailService/src</source>
