Created placeholder CompanyProjects page and linked dashboard tile to it. Updated all pages displaying form lists to display "Form" instead of "Form Design". Updated EditGISRecord placeholder panels and added currency formatting to Balance Due New files added - [CompanyProjects] Files modified - [UserClosedForms.variables.json,pages-config.json,CompanyForms.html,EditGISRecord.variables.json,MyCompany.html,EditGISRecord.html,pom.xml,UserClosedForms.html,ProcessForms.html,UserOpenForms.html,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -253,6 +253,17 @@
     } ],
     "pageTransitions" : "none"
   },
+  "goToPage_CompanyProjects" : {
+    "_id" : "wm-goToPage_CompanyProjects-wm.NavigationVariable-1491934485913",
+    "name" : "goToPage_CompanyProjects",
+    "owner" : "App",
+    "category" : "wm.NavigationVariable",
+    "dataBinding" : [ ],
+    "operation" : "gotoPage",
+    "pageName" : "CompanyProjects",
+    "dataSet" : [ ],
+    "pageTransitions" : "none"
+  },
   "goToPage_CompanyUsers" : {
     "_id" : "wm-goToPage_CompanyUsers-wm.NavigationVariable-1480417475427",
     "name" : "goToPage_CompanyUsers",
