--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -51,6 +51,10 @@
     "type" : "integer"
   } ]
 }, {
+  "name" : "CompanyProjects",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "CompanyUsers",
   "type" : "PAGE",
   "params" : [ {
